<resources>
    <string name="app_name">BabyTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="SLEEP">Sleep</string>
    <string name="MEAL">Meal</string>
    <string name="DIAPER">Diaper</string>
    <string name="MILESTONES">Milestones</string>
    <string name="MEDICATION">Medication</string>
    <string name="GROW">Grow</string>
    <string name="ALARM">Alarm</string>
    <string name="STATS">Statistics</string>
    <string name="SETTINGS">Settings</string>
    <string name="ALL_RECORDS" translatable="false">@string/record_list_title</string>

    <string name="MEAL_TYPE_BREAST_BOTH">Breast (BOTH SIDES)</string>
    <string name="MEAL_TYPE_BREAST_LEFT">Breast (LEFT)</string>
    <string name="MEAL_TYPE_BREAST_RIGHT">Breast (RIGHT)</string>
    <string name="MEAL_TYPE_BOTTLED">Bottled</string>
    <string name="MEAL_TYPE_MILK">Milk</string>

    <string name="DIAPER_PEEPEE">PeePee</string>
    <string name="DIAPER_POOPOO">PooPoo</string>
    <string name="DIAPER_BOTH">Pee &amp; Poo</string>

    <string name="stop">Stop</string>

    <string name="last_info_sleep_title">Last sleep</string>
    <string name="last_info_meal_title">Last meal</string>
    <string name="last_info_diaper_title">Last diaper</string>

    <string name="last_info_default_message">There is no info yet</string>
    <plurals name="last_info_days_ago">
        <item quantity="one">One day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="last_info_hours_ago">
        <item quantity="one">One hour %2$d minutes ago</item>
        <item quantity="other">%1$d hours %2$d minutes ago</item>
    </plurals>
    <plurals name="last_info_mins_ago">
        <item quantity="one">One minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="last_info_secs_ago">
        <item quantity="one">One second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>

    <plurals name="info_years_since_birth">
        <item quantity="one">One year %2$d months %3$d days old</item>
        <item quantity="other">%1$d years %2$d months %3$d days old</item>
    </plurals>
    <plurals name="info_months_since_birth">
        <item quantity="one">One month %2$d days old</item>
        <item quantity="other">%1$d months %2$d days old</item>
    </plurals>
    <plurals name="info_days_since_birth">
        <item quantity="one">One day old</item>
        <item quantity="other">%1$d days old</item>
    </plurals>

    <string name="hint_enter_milk_amount">Enter amount (ml)</string>

    <plurals name="duration_info_days">
        <item quantity="one">One day %2$d hours</item>
        <item quantity="other">%1$d days %2$d hours</item>
    </plurals>
    <plurals name="duration_info_hours">
        <item quantity="one">One hour %2$d minutes</item>
        <item quantity="other">%1$d hours %2$d minutes</item>
    </plurals>
    <plurals name="duration_info_minutes">
        <item quantity="one">One minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="duration_info_seconds">
        <item quantity="one">One second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="duration_info_pretty_short">Pretty short</string>

    <string name="record_edit_type">Type</string>
    <string name="record_edit_start">Start time</string>
    <string name="record_edit_end">End time</string>
    <string name="record_edit_duration">Duration</string>
    <string name="record_edit_amount">Amount</string>

    <string name="record_edit_empty_data">Empty</string>
    <string name="record_edit_amount_ml">%d ml</string>

    <string name="record_list_title">All Records</string>
    <string name="record_editor_title">Edit Record</string>
    <string name="profile_editor_title">Edit Profile</string>
    <string name="profile_editor_title_create">Add Profile</string>

    <string name="menu_item_edit">Edit Record</string>
    <string name="menu_item_delete">Delete Record</string>

    <string name="edit_storing">Storing changes</string>
    <string name="edit_successful">Edit successful.</string>
    <string name="edit_canceled">Edit canceled.</string>
    <string name="edit_canceled_no_change">Edit canceled. No change.</string>
    <string name="error_invalid_date">Invalid date. Edit canceled.</string>
    <string name="error_negative_duration">Write fail. Do not accept negative duration</string>

    <string name="delete_successful">Record deleted.</string>
    <string name="error_unknown">Unknown failure.</string>
    <string name="error_create_file">Fail to create file.</string>
    <string name="error_start_camera">Fail to start camera.</string>

    <string name="circle_info_am">This morning:</string>
    <string name="circle_info_pm">This afternoon:</string>
    <string name="circle_info_default_sleep">%1$s:\n\nSlept %2$d times\nDuration %3$s</string>
    <string name="circle_info_default_meal">%1$s:\n\nFed %2$d times\nDuration %3$s\nAmount %4$s</string>
    <string name="circle_info_default_diaper">%1$s\nChange %2$d diaper(s)</string>
    <string name="circle_info_default_add_data_hint">No data yet. How about adding a new one?</string>

    <string name="add_successful">Record added.</string>

    <string name="settings_title">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_profile">Setup profile</string>
    <string name="settings_enable_sound_effect">Enable sound effects</string>
    <string name="settings_enable_vibrate">Enable vibration</string>
    <string name="settings_backup">Backup %amp; restore</string>
    <string name="settings_backup_to_sd">Backup database to SDCard</string>
    <string name="settings_backup_restore_from_sd">Restore database from SDCard</string>
    <string name="settings_about">About</string>
    <string name="settings_about_check_updates">Check for updates</string>
    <string name="settings_about_version">Version</string>

    <string name="backup_fail_not_allowed">Write fail, not allowed to write to: %s</string>
    <string name="backup_successful">Backup successful, file path: %s</string>
    <string name="backup_successful_share_message">Backup successful, do you want to share this file?</string>
    <string name="hint_restore_clear_data">Data will be cleared before restore, are you sure?</string>
    <string name="backup_canceled">Backup is cancelled</string>
    <string name="restore_canceled">Restoration interrupted</string>
    <string name="share_file_to">Share to</string>
    <string name="select_restore_file">Select file to restore</string>
    <string name="hint_install_file_browser">Please install file browser and try again.</string>
    <string name="restore_successful">Restore successful</string>
    <string name="backup_process_message">Backup processing</string>
    <string name="restore_process_message">Restore processing</string>

    <string name="menu_item_take_pic">Take picture</string>
    <string name="menu_item_select_pic">Select from album</string>

    <string name="hint_enter_name">"Enter baby's name"</string>
    <string name="hint_enter_birth">"Enter baby's birthday"</string>
    <string name="gender_boy">Boy</string>
    <string name="gender_girl">Girl</string>
    <string name="gender_unknown">Unknown</string>

    <string name="default_user_name">My Babe</string>

    <string name="highlight_message_sleep">"%1$s(%2$s)\n%3$s - %4$s"</string>
    <string name="highlight_message_meal">"%1$s(%2$s)\n%3$s - %4$s"</string>
    <string name="highlight_message_meal_with_amount">"%1$s(%2$s)\n%3$s - %4$s\namount: %5$s"</string>
    <string name="highlight_message_diaper">"%1$s\n%2$s"</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="go_setup">Start</string>
    <string name="go_continue">Continue</string>

    <string name="back_key_exit_toast">Press back key again to exit</string>

    <string name="welcome_setup_title">"Welcome to %s"</string>
    <string name="welcome_setup_name_title">"Enter baby's name"</string>
    <string name="welcome_setup_gender_title">"Choose baby's gender"</string>
    <string name="welcome_setup_birth_title">"Choose baby's birthday"</string>
    <string name="welcome_setup_picture_title">"Choose baby's profile picture"</string>

    <string name="profile_list_title">My babies</string>
    <string name="profile_add_baby">Add a baby</string>

    <string name="setup_loading">Loading user profiles</string>
    <string name="setup_complete">Setup complete</string>
    <string name="go_use">Start</string>
</resources>
