<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_general">
        <Preference
            android:title="@string/settings_profile"
            android:key="key_profile"/>
        <CheckBoxPreference
            android:title="@string/settings_enable_sound_effect"
            android:key ="key_enable_sound_effect"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_backup">
        <Preference
            android:title="@string/settings_backup_to_sd"
            android:key="key_backup_to_sdcard"/>
        <Preference
            android:title="@string/settings_backup_restore_from_sd"
            android:key="key_restore_from_sdcard"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            android:title="@string/settings_about_check_updates"
            android:key="key_check_for_updates"/>
        <Preference
            android:title="@string/settings_about_version"
            android:key="key_version"/>
    </PreferenceCategory>
</PreferenceScreen>