<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_setup_gender_title"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/genderRadioGroup"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_boy"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:id="@+id/radioButtonBoy"
            android:layout_marginEnd="20dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_girl"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:id="@+id/radioButtonGirl"
            android:layout_marginEnd="20dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_unknown"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:id="@+id/radioButtonUnknown" />
    </RadioGroup>
</LinearLayout>