<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/button_cancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/button_ok"
            android:layout_weight="1" />
    </LinearLayout>

    <com.rnfstudio.babytracker.utility.RoundedImageView
        android:layout_width="@dimen/baby_icon_size_large"
        android:layout_height="@dimen/baby_icon_size_large"
        android:id="@+id/profileImage"
        android:src="@drawable/baby"
        android:layout_above="@+id/nameEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/nameEdit"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_enter_name"
        android:layout_marginBottom="5dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/birthEdit"
        android:hint="@string/hint_enter_birth"
        android:layout_below="@+id/nameEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthEdit"
        android:id="@+id/genderRadioGroup"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_boy"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:id="@+id/radioButtonBoy"
            android:layout_marginRight="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_girl"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:id="@+id/radioButtonGirl" />
    </RadioGroup>

</RelativeLayout>